<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Golly</string>
    <string name="dobando" translatable="false">Dobando</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="coordinate_x">X Coordinate</string>
    <string name="coordinate_y">Y Coordinate</string>
    <string name="add_cell">Add Cell</string>
    <string name="tianscar">Tianscar</string>
    <string name="draw_fps">Draw FPS</string>
    <string name="day_count">Days</string>
    <string name="free_space">Free Space</string>
    <string name="alive_cell_count">Alive Cells</string>
    <string name="authors">Authors</string>
    <string name="scale_mode_on">Scale Mode On</string>
    <string name="scale_mode_off">Scale Mode Off</string>
    <string name="map_width">Map Width</string>
    <string name="map_height">Map Height</string>
    <string name="iteration_map_fps">Iteration Map FPS</string>
    <string name="recenter_map">Recenter Map</string>
    <string name="info">Info</string>
    <string name="description">Description</string>
    <string name="copyright_info">Copyright © 2021 AnsdoShip Studio. All rights reserved.</string>
    <string name="help_content">
        In Golly, the following laws of survival are laid down: \n
        1. Cell iterations are divided into two parts, with color iterations priority over life iterations.\n
        2. Color iterations: \n
        (1). The color after the current cell iteration is randomly selected from the colors that appear most of the surrounding 8 cells,
        and if the number of living cells of the surrounding 8 cells is 0, the color of the cell remains unchanged after the iteration.
        3. Life iterations: \n
        (1). If the number of living cells around the current cell of the same color is equal to 3,
        the cell state becomes alive after iteration. \n
        (2). If the current cell is alive and the number of living cells around the cell of the same color is less than 2 or greater than 3,
        the cell state becomes dead after iteration. \n
        (3). If the current cell is alive and the number of living cells around the cell of the same color is equal to 2 or equal to 3,
        the cell state remains unchanged after iteration.</string>
    <string name="source_code_url" translatable="false">https://github.com/Ansdoship/Golly</string>
    <string name="source_code_url_underlined" translatable="false"><u>https://github.com/Ansdoship/Golly</u></string>
    <string name="open_source_info">Golly is open source. You can find the source code in GitHub.</string>
    <string name="palette_placeholder_string" translatable="false">■</string>
    <string name="palette">Palette</string>
    <string name="version_name" translatable="false">0.9.9-alpha</string>
    <string name="story_mode">Story Mode</string>
    <string name="sandbox_mode">Sandbox Mode</string>
    <string name="survive_mode">Survive Mode</string>
    <string name="versus_mode">Versus Mode</string>
    <string name="exit_game">Exit Game</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="coming_soon">Coming Soon !</string>
    <string name="main_menu">Main Menu</string>
    <string name="small_land">Small Land (64 * 64)</string>
    <string name="normal_land">Normal Land (128 * 128)</string>
    <string name="large_land">large Land (256 * 256)</string>
    <string name="draw_fps_limit">Draw FPS Limit</string>
    <string name="iteration_map_fps_limit">Iteration Map FPS Limit</string>
    <string name="initial_alive_probability">Initial Alive Probability</string>
    <string name="map_scale">Map Scale</string>
</resources>
