<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />

        <TextView
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="end"
            android:text="@string/version_name"
            android:textColor="@color/black"
            app:autoSizeTextType="uniform" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:scrollbarSize="2dp"
            android:scrollbarThumbVertical="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_story_mode"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/story_mode"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_sandbox_mode"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sandbox_mode"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_survive_mode"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survive_mode"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_versus_mode"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/versus_mode"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_exit_game"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_game"
                    android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>