<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:srcCompat="@drawable/ansdoship_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:layout_marginLeft="7sp"
        android:layout_marginEnd="7sp"
        android:layout_marginRight="7sp"
        android:gravity="center_horizontal"
        android:text="@string/copyright_info"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:layout_marginLeft="7sp"
        android:layout_marginTop="9sp"
        android:layout_marginEnd="7sp"
        android:layout_marginRight="7sp"
        android:gravity="center_horizontal"
        android:text="@string/authors"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:layout_marginLeft="7sp"
        android:layout_marginEnd="7sp"
        android:layout_marginRight="7sp"
        android:gravity="center_horizontal"
        android:text="@string/dobando"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:layout_marginLeft="7sp"
        android:layout_marginEnd="7sp"
        android:layout_marginRight="7sp"
        android:gravity="center_horizontal"
        android:text="@string/tianscar"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:layout_marginLeft="7sp"
        android:layout_marginTop="9sp"
        android:layout_marginEnd="7sp"
        android:layout_marginRight="7sp"
        android:gravity="center_horizontal"
        android:text="@string/open_source_info"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_source_code_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7sp"
        android:layout_marginLeft="7sp"
        android:layout_marginEnd="7sp"
        android:layout_marginRight="7sp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/source_code_url_html"
        android:textColor="@android:color/holo_blue_dark"
        android:textIsSelectable="true"
        android:textSize="18sp" />
</LinearLayout>